syntax="proto3";

message User {
  string name = 1;
  uint32 age = 2;
  string email = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1;
  uint32 age = 2;
  string email = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string name = 1;
}

message GetUserResponse {
  User user = 1;
}